<resources>
    <string name="app_name">ToDo</string>

    <string name="exitapp">Uygulamadan çıkmak istediğine emin misin? </string>
    <string name="connection_failed">Bağlantı Sağlanamadı</string>
    <string name="connection_failed_tex">İnternet bağlantınızın çalıştığını kontrol edin ve tekrar bağlanmayı deneyin..</string>
    <string name="btnTryAgain">Tekrar Deneyin</string>
    <string name="emptyText">Üzgünüz içerik bulunamadı</string>
    <string name="yes" translatable="false">Evet</string>
    <string name="NoCancel">Vazgeç</string>


    <string name="HOME_ACTIVITY">home</string>

    <string name="action_settings">Settings</string>
    <string name="hint_word">Word&#8230;</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="time">Time</string>
    <string name="empty_ph">No task added yet</string>

    <string name="itemTitle">Title</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="completed">Completed &#10003;</string>
    <string name="not_completed">Not completed</string>
    <string name="edit">&#9998; Edit</string>
    <string name="submit">Submit</string>
    <string name="create_task">Create Task</string>
    <string name="add_remind">Add Remind</string>
    <string name="date">Date</string>

    <string-array name="colors">
        <item>#F4511E</item>
        <item>#115EE7</item>
        <item>#09BB45</item>
        <item>#7B1FA2</item>
        <item>#BF1B13</item>
        <item>#00796B</item>
        <item>#FF8F00</item>
        <item>#D81B60</item>
    </string-array>

</resources>
