<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:id="@+id/parentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/iceBlueTwo"
                android:orientation="vertical"
                android:paddingStart="@dimen/marginStartEnd"
                android:paddingTop="32dp"
                tools:context=".NewTaskFragment">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="top|left"
                    android:hint="@string/itemTitle"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:scrollbars="vertical"
                    app:boxStrokeColor="#42A5F5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/taskTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:textSize="18sp"
                        android:transitionName="emailLoginTransition" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/description"
                    app:boxStrokeColor="#42A5F5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"
                        android:scrollbars="vertical"
                        android:textSize="18sp"
                        android:transitionName="emailLoginTransition" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgal"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_baseline_access_time_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:text="@string/add_remind"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <Switch
                        android:id="@+id/hasRemind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:background="@android:color/transparent" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyDateTimeArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:visibility="invisible">

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/date"
                        android:inputType="date"
                        android:textIsSelectable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="\@"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etTime"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/time"
                        android:inputType="date"
                        android:textIsSelectable="false" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnsubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/create_task"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </ScrollView>
</layout>


